# discord-mcp

./: .env.template  README.md  pyproject.toml
src/discord_mcp/: config.py  main.py
src/discord_mcp/discord/: __init__.py  client.py  events.py  exceptions.py  session.py
src/discord_mcp/mcp/: __init__.py  auth.py  context.py  server.py
src/discord_mcp/models/: __init__.py  channel.py  message.py  moderation.py  role.py
src/discord_mcp/tools/: __init__.py  audit_log.py  automod.py  channels.py  emoji.py  events.py  guild.py  invites.py  members.py  messages.py  moderation.py  permissions.py  polls.py  reactions.py  roles.py  threads.py  webhooks.py
src/discord_mcp/utils/: __init__.py  logging.py  validation.py
